# Xylo

./: README.md
infra/: render.yaml
infra/cloudflare-workers/: agent-negotiation-worker.js
xylo-core/: .env.example  Cargo.toml  Dockerfile
xylo-core/src/: main.rs
xylo-web/: pubspec.yaml
xylo-web/lib/: main.dart
xylo-web/web/: index.html
