[package]
name = "xylo-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
paseto = "2.0"
dotenvy = "0.15"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
alloy = { version = "0.1", features = ["full"] }
surrealdb = "1.0"
qdrant-client = "1.7"
nats = "0.24"
sp1-sdk = "0.1" # Hypothetical SDK for SP1 zkVM

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
